examples/valid/func.lama
int l ( int a ) { 
    return 5;
}
print l;