examples/invalid/is_empty.lama
int a ;
a = 4;
bool res = a.isEmpty();
print res;